feat: use proper tomato SVG icon for LCD screen

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -906,8 +906,17 @@ textarea.textarea.floating-prompt-input.forging {
 }
 
 .lcd-icon {
-  width: 11px;
-  height: 11px;
+  width: 14px;
+  height: 14px;
+  display: inline-block;
+  flex-shrink: 0;
+  background-color: currentColor;
+  -webkit-mask-size: contain;
+  mask-size: contain;
+  -webkit-mask-repeat: no-repeat;
+  mask-repeat: no-repeat;
+  -webkit-mask-position: center;
+  mask-position: center;
 }
 
 .lcd-ratio-icon {
@@ -1351,6 +1360,7 @@ textarea.textarea.floating-prompt-input.forging {
 .panel-icon.icon-refinement, .btn-icon.icon-refinement, .type-icon.icon-refinement { -webkit-mask-image: url('/refinement2.svg'); mask-image: url('/refinement2.svg'); }
 .panel-icon.icon-star, .btn-icon.icon-star, .type-icon.icon-star { -webkit-mask-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='none' stroke='currentColor' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpolygon points='12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2'%3E%3C/polygon%3E%3C/svg%3E"); mask-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='none' stroke='currentColor' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpolygon points='12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2'%3E%3C/polygon%3E%3C/svg%3E"); }
 .panel-icon.icon-drop, .btn-icon.icon-drop, .type-icon.icon-drop { -webkit-mask-image: url('/drop.svg'); mask-image: url('/drop.svg'); }
+.panel-icon.icon-tomato, .btn-icon.icon-tomato, .type-icon.icon-tomato, .lcd-icon.icon-tomato { -webkit-mask-image: url('/tomato.svg'); mask-image: url('/tomato.svg'); }
 
 .btn-icon {
   width: 14px;
