--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5190,6 +5190,16 @@ textarea.textarea.floating-prompt-input.forging {
   object-fit: cover;
 }
 
+.favorite-failed {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #c8c4c0;
+  color: #8a8580;
+}
+
 .favorite-item-delete {
   position: absolute;
   top: 4px;
